# Denario

./: .gitignore  .gitmodules  .readthedocs.yaml  README.md  data.txt  fix_vendored_imports.sh  installer.sh  main.py  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  restart_denario_advanced.py  restart_denario_ag2.py  restart_denario_gemini.py  restart_denario_gpt5_reasoning.py  run_denario_gemini.py  setup.cfg  setup.py  test_debug.py  test_gpt5_integration.py  test_gpt5_live.py
LaTeX/: bibliography.bib
Project1/: results.md
Project2/: data_description.md  methods.md
Project4/: methods.md  paper_v2.tex
Project5/: idea.md  methods.md  paper_v1.tex  results.md
astropilot/: __init__.py  astro_pilot.py  config.py  dataclasses.py  experiment.py  graph.py  idea.py  key_manager.py  latex.py  literature.py  llm.py  method.py  paper.py  paper_node.py  parameters.py  prompts.py  reader.py  research.py  tools.py  utils.py
astropilot/langgraph_agents/: agents_graph.py  idea.py  main.py  methods.py  parameters.py  prompts.py  reader.py
astropilot/paper_agents/: dataclasses.py  journal.py  latex.py  latex_presets.py  literature.py  paper_node.py  parameters.py  prompts.py  reader.py  tools.py
astropilot/paper_agents/LaTeX/: abbrv.bst
denario/: ag2_integration.py  denario.py  experiment.py  gpt5_integration.py  gpt5_integration.py.bak  gpt5_responses_adapter.py  idea.py  key_manager.py  llm.py  method.py
denario/langgraph_agents/: prompts.py
denario/paper_agents/: latex.py  literature.py  paper_node.py  tools.py
docs/: GPT5_REASONING_INTEGRATION.md  api_astropilot.md  api_classes.md  api_journals.md  api_llms.md  api_paper.md  api_utils.md  apikeys.md  app.md  get_started.md  index.md  install.md  prompts.md  requirements.txt  troubleshooting.md
examples/: research_idea.ipynb
examples/Project1/: input.md
examples/Project1/input_files/: idea.md
examples/Project2/: input.md
examples/Project2/input_files/: idea.md  methods.md  results.md
input_files/: data_description.md  data_description_camels.md  data_description_camels_colab.md  data_description_camels_png.md  idea.md  method.md  methods.md  results.md
myprompts/: dsa2000psr_prompt.md
notebooks/: astropilot.ipynb  astropilot_camels_full_run.ipynb  astropilot_full_run.ipynb  astropilot_full_run_mica.ipynb  astropilot_full_run_project_repo.ipynb  astropilot_full_run_project_repo_perovskite.ipynb  astropilot_get_idea.ipynb  astropilot_get_keywords.ipynb  astropilot_get_method.ipynb  astropilot_get_paper.ipynb  astropilot_get_results.ipynb  astropilot_get_results_pkemu_project.ipynb  astropilot_keyword_search.ipynb  astropilot_lit_search.ipynb  astropilot_research.ipynb  astropilot_set_data_description.ipynb  astropilot_set_idea.ipynb  astropilot_set_method.ipynb  astropilot_write_paper.ipynb  research_idea.ipynb
papers/Project1/: idea.md
papers/Project2/: results.md
papers/Project3/: idea.md  methods.md  results.md
papers/Project4/: idea.md  results.md
papers/Project6/: Example.tex  data_description_camels.md  methods.md
project_gemini/experiment_generation_output/context/backup_20250818/: context_step_0.pkl  context_step_1.pkl  context_step_2.pkl  context_step_3.pkl  context_step_4.pkl  context_step_5.pkl
project_gemini/experiment_generation_output/control/backup_20250818/: adaptive_pulsar_timing.md  analytic_cadence.py  analytic_cadence_recommendations.csv  chat_history_step_1.json  chat_history_step_2.json  chat_history_step_3.json  chat_history_step_4.json  chat_history_step_5.json  chat_output_engineer_step_1.json  chat_output_engineer_step_2.json  chat_output_engineer_step_3.json  validation.py  (+27 more)
project_gemini/input_files/: data_description.md  idea.md  methods.md
project_gemini/method_generation_output/planning/: final_plan.json
scripts/: README.md
scripts/restart/: restart_denario_ag2.py  restart_denario_gpt5_reasoning.py  restart_gpt5.py  run_denario_hybrid.py  run_restart_skip_paper.sh
scripts/temporary/: tmp_inspect_engineer.py  tmp_instantiate_cmbagent.py  tmp_print_syspath.py  tmp_verify_gpt5_cleanup.py
scripts/testing/: test_claude_opus.py  test_gpt5.py  test_gpt5_integration.py  test_gpt5_variations.py
scripts/utilities/: denario_status.py
src/: graph.py  latex.py  llm.py  paper_node.py  parameters.py  prompts.py  reader.py  tools.py
test_apis/: list_openai_models.py  package-lock.json  test_ag2_basic.py  test_ag2_detection.py  test_gemini_models.py  test_gpt5.py  test_gpt5_adapter.py  test_gpt5_chat.py  test_openai_models.py  test_restart_ag2_flow.py
tests/: test_astropilot_paper.py  test_astropilot_write_paper.py
(+44 files in other folders)
