[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "astropilot"
version = "0.1.0"
description = "A set of AI agents to automatize scientific research in Astrophysics and Cosmology"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }  # Adjust if you use a different license

dependencies = [
  "langchain==0.3.23",
  "langchain-anthropic==0.3.10",
  "langchain-chroma==0.2.2",
  "langchain-community==0.3.21",
  "langchain-core==0.3.51",
  "langchain-google-genai",
  "langchain-google-vertexai==2.0.19",
  "langchain-groq==0.3.2",
  "langchain-openai==0.3.12",
  "langchain-text-splitters==0.3.8",
  "langgraph==0.3.25",
  "langgraph-checkpoint==2.0.24",
  "langgraph-checkpoint-sqlite==2.0.6",
  "langgraph-prebuilt==0.1.8",
  "langgraph-sdk==0.1.61",
  "langsmith==0.3.25",
  "google-geneai==1.8.0",
  "google-cloud-aiplatform==1.85.0",
  "google-ai-generativelanguage==0.6.17",
  "flatbuffers==24.12.23",
  "filelock==3.17.0",
  "numpy==1.26.4",
  "jupyterlab",
  "ipywidgets"
]


[tool.setuptools.packages.find]
where = ["."]
