[project]
name = "astropilot"
version = "0.1.0"
description = "A set of AI agents to automatize scientific research in Astrophysics and Cosmology"
authors = [
  { name = "Boris Bolliet", email = "boris.bolliet@gmail.com" },
  { name = "Francisco Villaescusa-Navarro", email = "villaescusa.francisco@gmail.com" },
  { name = "Pablo Villanueva-Domingo", email = "pablo.villanueva.domingo@gmail.com" }, 
  { name = "Adrian Bayer", email = "abayer@flatironinstitute.org" },
]
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
  "langchain>=0.3.23",
  "langchain-anthropic>=0.3.10",
  "langchain-chroma>=0.2.2",
  "langchain-community>=0.3.21",
  "langchain-core>=0.3.51",
  "langchain-google-genai",
  "langchain-google-vertexai>=2.0.19",
  "langchain-groq>=0.3.2",
  "langchain-openai>=0.3.12",
  "langchain-text-splitters>=0.3.8",
  "langgraph>=0.3.25",
  "langgraph-checkpoint>=2.0.24",
  "langgraph-checkpoint-sqlite>=2.0.6",
  "langgraph-prebuilt>=0.1.8",
  "langgraph-sdk>=0.1.61",
  "google-cloud-aiplatform",
  "google-ai-generativelanguage>=0.6.17",
  "flatbuffers>=24.12.23",
  "filelock>=3.17.0",
  "cmbagent>=0.0.1.post30",
  "pymupdf",
  "pillow",
  "jsonschema",
]

[dependency-groups]
dev = [
  {include-group = "docs"},
  {include-group = "app"}
]
docs = [
  "mkdocs",
  "mkdocstrings[python]",
  "mkdocs-material>=9.6.12",
  "mkdocs-jupyter>=0.25.1",
  "mkdocs-git-committers-plugin-2>=2.5.0",
]
app = [
  "streamlit",
  "streamlit_pdf_viewer",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.setuptools.packages.find]
where = ["."]

[tool.uv.workspace]
members = [
    "AstroPilotApp",
]
