[metadata]
name = AstroPilot
version = 0.1.0
description = A set of AI agents to automatize scientific research in Astrophysics and Cosmology

[options]
packages = find:
install_requires =
    langchain
    langchain-chroma
    langchain-community
    langchain-google-vertexai
    langchain-groq
    langchain-google-genai
    langchain-openai
    langchain-anthropic
    langgraph
    langgraph-checkpoint-sqlite
    pydantic
    dotenv
    requests
    typing-extensions
    pdflatex
    tqdm
    pymupdf
    pillow
include_package_data = True
